# play_room

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  export-github-repos.mjs  github-repos-lovisticsdev.json  print_tree.py
crates/play-room-client/: Cargo.toml
crates/play-room-client/src/: commands.rs  config.rs  connection.rs  errors.rs  main.rs  render.rs
crates/play-room-core/: Cargo.toml
crates/play-room-core/src/: command.rs  errors.rs  event.rs  game.rs  ids.rs  lib.rs  player.rs  room.rs  rules.rs  scoreboard.rs  state.rs  timer.rs
crates/play-room-core/src/room/: tests.rs
crates/play-room-protocol/: Cargo.toml
crates/play-room-protocol/src/: codec.rs  error.rs  event.rs  lib.rs  manifest.rs  message.rs  request.rs  response.rs  schema.rs  version.rs
crates/play-room-server/: Cargo.toml
crates/play-room-server/src/: broadcast.rs  config.rs  errors.rs  expiry.rs  fanout.rs  identity.rs  main.rs  membership.rs  room_lifecycle.rs  room_manager.rs  room_registry.rs  router.rs  scheduler.rs  server.rs  session.rs  session_registry.rs  websocket_session.rs
crates/play-room-server/src/room_manager/: error.rs  tests.rs
crates/play-room-testkit/: Cargo.toml
crates/play-room-testkit/src/: assertions.rs  chaos.rs  generators.rs  lib.rs  scenario.rs  scripted_client.rs
docs/: architecture.md  protocol.md  state-machine.md  testing.md  web-ui-plan.md
examples/: server.toml
examples/scripted_clients/: reconnect_match.json  spectator_match.json  timeout_match.json  two_player_match.json
scripts/: README.md  run-client.ps1  run-client.sh  run-server.ps1  run-server.sh  run-web.ps1  run-web.sh
tests/: move_privacy.rs  protocol_roundtrip.rs  reconnect_flow.rs  scripted_scenarios.rs  spectator_flow.rs  timeout_flow.rs  two_player_match.rs
tests/common/: mod.rs
web/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/src/: App.svelte  app.css  main.ts
web/src/components/: ConnectionPanel.svelte  EventLog.svelte  GameBoard.svelte  LobbyView.svelte  PlayerList.svelte  ReconnectPanel.svelte  RoomView.svelte  Scoreboard.svelte
web/src/components/layout/: ConnectionPanel.svelte  (+2 more)
web/src/lib/: client-state.ts  commands.ts  protocol.ts  websocket.ts
web/src/styles/: base.css  match.css  notifications.css  responsive.css  rooms.css  shell.css  ui.css
(+57 files in other folders)
