[package]
name = "play-room"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT"

[workspace]
resolver = "2"
members = [
    "crates/play-room-core",
    "crates/play-room-protocol",
    "crates/play-room-server",
    "crates/play-room-client",
    "crates/play-room-testkit",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["Lovice Ochieng <lovisticsdev@gmail.com>"]
repository = "https://github.com/lovisticsdev/play_room"

[workspace.dependencies]
play-room-core = { path = "crates/play-room-core" }
play-room-protocol = { path = "crates/play-room-protocol" }
play-room-testkit = { path = "crates/play-room-testkit" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
thiserror = "1.0"
tokio = { version = "1.42", features = ["full"] }
futures-util = "0.3"
tokio-tungstenite = "0.28"
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
toml = "0.8"
rand = "0.8"

[dependencies]
play-room-core.workspace = true
play-room-protocol.workspace = true
play-room-testkit.workspace = true
serde_json.workspace = true

[[test]]
name = "protocol_roundtrip"
path = "tests/protocol_roundtrip.rs"

[[test]]
name = "two_player_match"
path = "tests/two_player_match.rs"

[[test]]
name = "spectator_flow"
path = "tests/spectator_flow.rs"

[[test]]
name = "reconnect_flow"
path = "tests/reconnect_flow.rs"

[[test]]
name = "timeout_flow"
path = "tests/timeout_flow.rs"

[[test]]
name = "move_privacy"
path = "tests/move_privacy.rs"
[[test]]
name = "scripted_scenarios"
path = "tests/scripted_scenarios.rs"
