[package]
name = "play-room-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
play-room-core.workspace = true
play-room-protocol.workspace = true
clap.workspace = true
serde.workspace = true
futures-util.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
thiserror.workspace = true
